feat(sc):取消了成绩的外键关联
